# agweather-qaqc

./: .gitignore  CITATION.cff  LICENSE  QAQC_Master.py  README.md  config.ini  correction_metadata.xlsx  nicenet_notes.xlsx  pyproject.toml  qaqc_single_station.py  requirements.txt  test_calculations.py
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: ci.yml  (+3 more)
agweatherqaqc/: __init__.py  agweatherqaqc.py  calc_functions.py  input_functions.py  plot.py  plotting_functions.py  qaqc_functions.py  utils.py
docs/: .buildinfo  EXAMPLERUN.md  INSTALL.md  SETUP.md  about_project.html  agweatherqaqc.html  conf.py  correction_methods.html  correction_process.html  data_issues.html  data_preparation.html  data_setup.html  example_run.html  genindex.html  index.html  installation.html  modules.html  objects.inv  problems.html  py-modindex.html  python_setup.html  qaqc_setup.html  qc_information.html  search.html  searchindex.js
example_data/: CokevilleUT_Daily.csv  EncampmentWY_Daily.csv  MohaveAZ_Daily.csv  SpringvalleyNV_Daily.csv  example_station_1.csv  example_stations_metadata.xlsx
modules/: __init__.py  data_functions.py  input_functions.py  plotting_functions.py  py_weather_qaqc.py  qaqc_functions.py  utils.py
paper/: paper.bib  paper.md
qaqc_modules/: correction.py  data_functions.py  input_functions.py  old_qaqc_functions.py  plotting_functions.py  py_weather_qaqc.py  qaqc_functions.py  rs_et_calc.py
test_files/: test_config.ini  test_data_2.csv  test_metadata.xlsx
tests/: test_calculations.py
(+41 files in other folders)
